# rms

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  main.c  rms.c  rms.h
lib/: CMakeLists.txt  rms.c  rms.h
test/: CMakeLists.txt  test.cpp
